Enhance layman manual and add PDF build workflow
Co-authored-by: failagainfailbetter <138304529+failagainfailbetter@users.noreply.github.com>